[gd_scene load_steps=7 format=2]

[ext_resource path="res://graphics/Triangle-Transparent.png" type="Texture" id=1]
[ext_resource path="res://graphics/e211a123-bd0d-4d98-898b-df0e4e7d8b52.png" type="Texture" id=2]
[ext_resource path="res://scripts/ship.gd" type="Script" id=3]
[ext_resource path="res://audio/sounds/electric_buzz.mp3" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 11.5974

[sub_resource type="CircleShape2D" id=2]
radius = 12.0104

[node name="ship" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="core" type="Area2D" parent="."]
collision_mask = 4

[node name="core_collider" type="CollisionShape2D" parent="core"]
shape = SubResource( 1 )

[node name="triangle" type="Sprite" parent="."]
position = Vector2( 19.5, 0.5 )
rotation = 1.5708
scale = Vector2( 0.1, 0.2 )
texture = ExtResource( 1 )

[node name="core_sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="field" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="field_collider" type="CollisionShape2D" parent="field"]
shape = SubResource( 2 )

[node name="proximity" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.59
pitch_scale = 2.33
autoplay = true
bus = "effects"

[connection signal="area_entered" from="core" to="." method="_on_core_area_entered"]
[connection signal="area_entered" from="field" to="." method="_on_field_area_entered"]
[connection signal="area_exited" from="field" to="." method="_on_field_area_exited"]
